--- a/index3-1card.html
+++ b/index3-1card.html
@@ -48,8 +48,8 @@
     </div>
     <div class="container pt-5">
         <div class="row justify-content-center ">
-            <div class="w875">
-                <form class="ml-5">
+            <div class="w875 ">
+                <form class="ml-5 col-12">
                     <div class="form-group">
                         <label for="name">收件姓名 :</label>
                         <input type="text" class="form-control col-4 inputstyle" placeholder="姓名">
@@ -158,7 +158,36 @@
             <button class="btn"><span>確認購買</span></button>
         </div>
     </div>
-
+    <div class="footer d-flex pt-5 pb-2 mt-5">
+        <div class="col-4 align-self-center mb-5">
+            <h5 class="text-center white">Secure Payment</h5>
+            <div class="d-flex  justify-content-center">
+                <a href="">
+                    <i class="fab fa-cc-jcb white"></i>
+                </a>
+                <a href="">
+                    <i class="fab white fa-cc-visa"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="d-flex justify-content-center"><img src="./img/LOGO 深色.jpg" alt=""></div>
+        </div>
+        <div class="col-4 align-self-center mb-5">
+            <h5 class="text-center white ">Follow Us</h5>
+            <div class="d-flex  justify-content-center">
+                <a href="">
+                    <i class="fab fa-facebook white"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-twitter white"></i>
+                </a>
+                <a href=""><i class="fab fa-skype white"></i></a>
+                <a href=""><i class="fab fa-tumblr-square white"></i></a>
+                <a href=""><i class="fas fa-envelope-square white"></i></a>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Optional JavaScript -->
