--- a/index3.html
+++ b/index3.html
@@ -114,7 +114,36 @@
         </div>
     </div>
 
-
+    <div class="footer d-flex pt-5 pb-2 mt-5">
+        <div class="col-4 align-self-center mb-5">
+            <h5 class="text-center white">Secure Payment</h5>
+            <div class="d-flex  justify-content-center">
+                <a href="">
+                    <i class="fab fa-cc-jcb white"></i>
+                </a>
+                <a href="">
+                    <i class="fab white fa-cc-visa"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="d-flex justify-content-center"><img src="./img/LOGO 深色.jpg" alt=""></div>
+        </div>
+        <div class="col-4 align-self-center mb-5">
+            <h5 class="text-center white ">Follow Us</h5>
+            <div class="d-flex  justify-content-center">
+                <a href="">
+                    <i class="fab fa-facebook white"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-twitter white"></i>
+                </a>
+                <a href=""><i class="fab fa-skype white"></i></a>
+                <a href=""><i class="fab fa-tumblr-square white"></i></a>
+                <a href=""><i class="fas fa-envelope-square white"></i></a>
+            </div>
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
