--- a/index5.html
+++ b/index5.html
@@ -13,49 +13,82 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./cartstyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container mt-5 pt-5 -mb-5 pb-5">
-        <div class="row">
-            <p> HOME / 商品 / 確認購買明細</p>
+    <div class="container mt-5 pt-4">
+        <div class="row justify-content-center rongdash  ml-5 bo ">
+
         </div>
-
-    </div>
-    <div class="container">
-        <div class="d-flex justify-content-between ">
-            <div class="rongboxborder ">
-                <p class="">確認購買明細</p>
-
-            </div>
-            <div class="rongboxborder">
-                <p> 配送與付款方式</p>
-
-            </div>
-            <div class="rongboxborder">
-                <p>填寫收件資料</p>
-
-            </div>
-            <div class="rongboxborder rongboxbg">
-                <p class="rongtextcolor">確認訂單</p>
+        <div class="row justify-content-center   ml-5 pr-3">
+            <div class="rongorderlist mr-5">
+                <p class="mt-3">訂單查詢</p>
             </div>
         </div>
     </div>
-    <div class="container mt-5 pt-5">
-        <div class="d-flex justify-content-center">
-            <div class="w875 borderbottom">
-                <p>CHECK YOUR ORDER 詳細訂單</p>
+    <div class="container mt-5 ">
+        <div class="row justify-content-center mb-5">
+            <div class="borderstyle w875">
+                <div class="rongorder2">訂單編號 : <span class="red">202109210001</span></div>
+                <table class="table table-bordered col ">
+                    <thead class="">
+                        <tr>
+                            <th scope="col" class="text-center">訂購日期</th>
+                            <th scope="col" class="text-center">訂單編號</th>
+                            <th scope="col" class="text-center">付款方式</th>
+                            <th scope="col" class="text-center">應付金額</th>
+                            <th scope="col" class="text-center">訂單狀態</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="text-center">2021-09-21</td>
+                            <td class="text-center red">202109210001</td>
+                            <td class="text-center">到貨付款</td>
+                            <td class="text-center">990</td>
+                            <td class="text-center red">已出貨</td>
+                        </tr>
+                        <div></div>
+                    </tbody>
+                </table>
             </div>
         </div>
-    </div>
-    <div class="container mt-5">
+
+
+        <div class="row justify-content-center ">
+            <div class="borderstyle w875">
+                <div class="rongorder2">訂單編號 : <span class="red">202109210001</span></div>
+                <table class="table table-bordered col ">
+                    <thead class="">
+                        <tr>
+                            <th scope="col" class="text-center">訂購日期</th>
+                            <th scope="col" class="text-center">訂單編號</th>
+                            <th scope="col" class="text-center">付款方式</th>
+                            <th scope="col" class="text-center">應付金額</th>
+                            <th scope="col" class="text-center">訂單狀態</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="text-center">2021-09-21</td>
+                            <td class="text-center red">202109210001</td>
+                            <td class="text-center">到貨付款</td>
+                            <td class="text-center">990</td>
+                            <td class="text-center red">已出貨</td>
+                        </tr>
+                        <div></div>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
         <div class="row justify-content-center">
             <div class="borderstyle w875">
-                <div class="rongorder">詳細訂單</div>
                 <table class="table  col ">
                     <thead class="">
-
                         <tr>
                             <th scope="col">商品資訊</th>
                             <th scope="col" class="text-center">商品數量</th>
@@ -67,7 +100,8 @@
 
                             <td class="d-flex">
                                 <div><img src="./img/pd.jpg" alt=""></div>
-                                <div class="ml-5">Bumblebee Cans</div>
+                                <div class="ml-5">Bumblebee Cans <p class="size"> 黃 over 100cm</p>
+                                </div>
                             </td>
                             <td class="text-center">1</td>
                             <td class="text-center">$99</td>
@@ -76,7 +110,8 @@
 
                             <td class="d-flex">
                                 <div><img src="./img/pd.jpg" alt=""></div>
-                                <div class="ml-5">Bumblebee Cans</div>
+                                <div class="ml-5">Bumblebee Cans<p class="size"> 黃 over 100cm</p>
+                                </div>
                             </td>
                             <td class="text-center">1</td>
                             <td class="text-center">$99</td>
@@ -85,7 +120,8 @@
 
                             <td class="d-flex">
                                 <div><img src="./img/pd.jpg" alt=""></div>
-                                <div class="ml-5">Bumblebee Cans</div>
+                                <div class="ml-5">Bumblebee Cans<p class="size"> 黃 over 100cm</p>
+                                </div>
                             </td>
                             <td class="text-center">1</td>
                             <td class="text-center">$99</td>
@@ -117,44 +153,15 @@
 
             </div>
         </div>
-        <div class="container pt-5">
-            <div class="row justify-content-center ">
-                <div class="w875">
-                    <form class="ml-5 rongorderdetail">
-                        <div class="form-group">
-                            <label for="name">訂單編號 : </label><span class="red">202109210001</span>
-                        </div>
-                        <div class="form-group">
-                            <label for="name">訂購日期 : </label><span>20210921</span>
-                        </div>
-                        <div class="form-group">
-                            <label for="name">付款方式 : </label><span>到貨付款</span>
-                        </div>
-                        <div class="form-group">
-                            <label for="name">會員帳號 : </label><span>aaa@gmail.com</span>
-                        </div>
-                        <div class="form-group">
-                            <label for="name">會員姓名 : </label><span>王小名</span>
-                        </div>
-                        <div class="form-group">
-                            <label for="name">會員手機 : </label><span>0911123456</span>
-                        </div>
-                        <div class="form-group">
-                            <label for="name">會員地址 : </label><span>台北市大安區和平東路二段106號11樓</span>
-                        </div>
 
-
-                    </form>
-                </div>
-            </div>
-        </div>
         <div class="container mt-5 pt-4">
             <div class="row justify-content-center ">
-                <button class="btn"><span>送出</span></button>
+                <button class="btn"><span>返回</span></button>
 
             </div>
         </div>
-    </div>
+    </div>>
+
     <div class="footer d-flex pt-5 pb-2 mt-5">
         <div class="col-4 align-self-center mb-5">
             <h5 class="text-center white">Secure Payment</h5>
@@ -185,8 +192,6 @@
             </div>
         </div>
     </div>
-
-
 
 
 
