--- a/index2.html
+++ b/index2.html
@@ -21,26 +21,17 @@
         <div class="row">
             <p> HOME / 商品 / 確認購買明細</p>
         </div>
-
     </div>
-
-
-
-
-
     <div class="container">
         <div class="d-flex justify-content-between ">
             <div class="rongboxborder ">
                 <p>確認購買明細</p>
-
             </div>
             <div class="rongboxborder rongboxbg">
                 <p class="rongtextcolor"> 配送與付款方式</p>
-
             </div>
             <div class="rongboxborder">
                 <p>填寫收件資料</p>
-
             </div>
             <div class="rongboxborder">
                 <p>確認訂單</p>
@@ -69,34 +60,23 @@
                 <input class="mt-2" type="radio" name="delivery"><label for="">
                     <p>購物金全額折抵 <span> 全館消費可享免運(特價商品金額不列入免運優惠計算)</span></p>
                 </label>
-
             </div>
             <div class="rongproducttype d-flex .select rongradiostyle">
                 <input class="mt-2" type="radio" name="delivery"><label for="">
                     <p>宅配到貨付款 <span> 全館消費可享免運(特價商品金額不列入免運優惠計算)</span></p>
                 </label>
-
             </div>
             <div class="rongproducttype d-flex .select rongradiostyle">
                 <input class="mt-2" type="radio" name="delivery"><label for="">
                     <p>7-11超商取貨付款 <span> 全館消費可享免運(特價商品金額不列入免運優惠計算)</span></p>
                 </label>
-
             </div>
             <div class="rongproducttype d-flex .select rongradiostyle">
                 <input class="mt-2" type="radio" name="delivery"><label for="">
                     <p>信用卡線上刷卡 <span> 全館消費可享免運(特價商品金額不列入免運優惠計算)</span></p>
                 </label>
-
             </div>
-
         </div>
-
-
-
-
-
-
         <div class="container mt-5 pt-5">
             <div class="d-flex justify-content-center">
                 <div style="width: 875px; border-bottom: 1px solid #5E5D5D;">
@@ -107,124 +87,134 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="rongproducttype d-flex">
-                    <div class="col-5">
-                        <p>商品名稱</p>
+                    <table class="table  col ">
+                        <thead class="table-dark">
+                            <tr>
+                                <th scope="col">商品名稱</th>
+                                <th scope="col" class="text-center">尺寸</th>
+                                <th scope="col" class="text-center">數量</th>
+                                <th scope="col" class="text-center">單價</th>
+                                <th scope="col" class="text-center">小計</th>
+                                <th scope="col" class="text-center">刪除</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="d-flex">
+                                    <div><img src="./img/pd.jpg" alt=""></div>
+                                    <div class="ml-5">Bumblebee Cans</div>
+                                </td>
+                                <td class="text-center">黃 over 100cm </td>
+                                <td class="text-center">1</td>
+                                <td class="text-center">200</td>
+                                <td class="text-center">200</td>
+                                <td class="text-center"><i class="fas fa-trash"></i></td>
+                            </tr>
+                            <tr>
+                                <td class="d-flex">
+                                    <div><img src="./img/pd.jpg" alt=""></div>
+                                    <div class="ml-5">Bumblebee Cans</div>
+                                </td>
+                                <td class="text-center">黃 over 100cm </td>
+                                <td class="text-center">1</td>
+                                <td class="text-center">200</td>
+                                <td class="text-center">200</td>
+                                <td class="text-center"><i class="fas fa-trash"></i></td>
+                            </tr>
+                            <tr>
+                                <td class="d-flex">
+                                    <div><img src="./img/pd.jpg" alt=""></div>
+                                    <div class="ml-5">Bumblebee Cans</div>
+                                </td>
+                                <td class="text-center">黃 over 100cm </td>
+                                <td class="text-center">1</td>
+                                <td class="text-center">200</td>
+                                <td class="text-center">200</td>
+                                <td class="text-center"><i class="fas fa-trash"></i></td>
+                            </tr>
+                        </tbody>
+
+                    </table>
+
+                </div>
+            </div>
+            <div class="container mt-5 pt-4">
+                <div class="row justify-content-end rongtotal">
+                    <div class="mr-5 ">
+                        <p>總金額</p>
+                        <p class="rong">運費</p>
+                        <p>購物金</p>
                     </div>
-                    <div class="col-7">
-                        <ul class=" d-flex list-unstyled">
-                            <li class="mr-5">尺寸 </li>
-                            <li class="mr-5 ml-5">數量</li>
-                            <li class="mr-4">單價</li>
-                            <li class="mr-auto">小計</li>
-                            <li class="">刪除</li>
-                        </ul>
+                    <div class="ml-5">
+                        <p>NT.298</p>
+                        <p>NT.0</p>
+                        <p>NT.0</p>
                     </div>
                 </div>
-                <div class="rongproducttype d-flex">
-                    <div class="col-5 d-flex pb-2">
-                        <div><img src="./img/pd.jpg" alt=""></div>
-                        <div class="ml-5">Bumblebee Cans</div>
-
+                <div class="row justify-content-end rongtotal">
+                    <div class="mr-5 rongsettotal ">
+                        <p>應付金額
+                        </p>
                     </div>
-                    <div class="col-7">
-                        <ul class=" d-flex list-unstyled ">
-                            <li class="mr-5 pt-auto">黃 over 100cm </li>
-                            <li class="mr-5">1</li>
-                            <li class="mr-5">99</li>
-                            <li class="mr-auto">99</li>
-                            <li class="mr-1"><i class="fas fa-trash"></i></li>
-                        </ul>
+                    <div class="ml-5  rongsettotal">
+                        <span>NT.298</span>
                     </div>
                 </div>
-                <div class="rongproducttype d-flex">
-                    <div class="col-5 d-flex pb-2">
-                        <div><img src="./img/pd.jpg" alt=""></div>
-                        <div class="ml-5">Bumblebee Cans</div>
+            </div>
 
-                    </div>
-                    <div class="col-7">
-                        <ul class=" d-flex list-unstyled ">
-                            <li class="mr-5 pt-auto">黃 over 100cm </li>
-                            <li class="mr-5">1</li>
-                            <li class="mr-5">99</li>
-                            <li class="mr-auto">99</li>
-                            <li class="mr-1"><i class="fas fa-trash"></i></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="rongproducttype d-flex">
-                    <div class="col-5 d-flex pb-2">
-                        <div><img src="./img/pd.jpg" alt=""></div>
-                        <div class="ml-5">Bumblebee Cans</div>
-
-                    </div>
-                    <div class="col-7">
-                        <ul class=" d-flex list-unstyled ">
-                            <li class="mr-5 pt-auto">黃 over 100cm </li>
-                            <li class="mr-5">1</li>
-                            <li class="mr-5">99</li>
-                            <li class="mr-auto">99</li>
-                            <li class="mr-1"><i class="fas fa-trash"></i></li>
-                        </ul>
-                    </div>
+            <div class="container mt-5 pt-4">
+                <div class="row justify-content-center ">
+                    <button class="btn"><span>下一步</span></button>
                 </div>
             </div>
         </div>
-        <div class="container mt-5 pt-4">
-            <div class="row justify-content-end rongtotal">
-                <div class="mr-5 ">
-                    <p>總金額</p>
-                    <p class="rong">運費</p>
-                    <p>購物金</p>
-                </div>
-                <div class="ml-5">
-                    <p>NT.298</p>
-                    <p>NT.0</p>
-                    <p>NT.0</p>
-                </div>
-            </div>
-            <div class="row justify-content-end rongtotal">
-                <div class="mr-5 rongsettotal ">
-                    <p>應付金額
-                    </p>
-
-                </div>
-                <div class="ml-5  rongsettotal">
-                    <span>NT.298</span>
-
-                </div>
+    </div>
+    <div class="footer d-flex pt-5 pb-2 mt-5">
+        <div class="col-4 align-self-center mb-5">
+            <h5 class="text-center white">Secure Payment</h5>
+            <div class="d-flex  justify-content-center">
+                <a href="">
+                    <i class="fab fa-cc-jcb white"></i>
+                </a>
+                <a href="">
+                    <i class="fab white fa-cc-visa"></i>
+                </a>
             </div>
         </div>
-
-
-
-
-
-
-
-        <div class="container mt-5 pt-4">
-            <div class="row justify-content-center ">
-                <button class="btn"><span>下一步</span></button>
-                
+        <div class="col-4">
+            <div class="d-flex justify-content-center"><img src="./img/LOGO 深色.jpg" alt=""></div>
+        </div>
+        <div class="col-4 align-self-center mb-5">
+            <h5 class="text-center white ">Follow Us</h5>
+            <div class="d-flex  justify-content-center">
+                <a href="">
+                    <i class="fab fa-facebook white"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-twitter white"></i>
+                </a>
+                <a href=""><i class="fab fa-skype white"></i></a>
+                <a href=""><i class="fab fa-tumblr-square white"></i></a>
+                <a href=""><i class="fas fa-envelope-square white"></i></a>
             </div>
         </div>
+    </div>
 
 
 
 
 
-
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src=" https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-            </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src=" https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
