--- a/index4.html
+++ b/index4.html
@@ -95,22 +95,27 @@
 
                 </table>
                 <div class="borderbottom"></div>
-                <div class="d-flex justify-content-end mt-5  ">
-                    <div class="rongsettotal mr-5 ">
-
+                <div class="container mt-3   w875 ">
+                    <div class="row justify-content-end rongtotal pr-5">
+                        <div class="mr-5 ">
+                            <p>總金額</p>
+                            <p class="rong">運費</p>
+                            <p>購物金</p>
+                        </div>
+                        <div class="ml-5 ">
+                            <p>NT.298</p>
+                            <p>NT.0</p>
+                            <p>NT.0</p>
+                        </div>
                     </div>
-                    <div class="rongsettotal2 mr-5 pr-5">
-                        <p>總金額</p>
-                        <p>運費</p>
-                        <p>購物金</p>
-                        <p><span>應付金額</span>
-                        </p>
-                    </div>
-                    <div class="rongsettotal2 mr-4 pr-5 pb-4">
-                        <p>NT.298</p>
-                        <p>NT.0</p>
-                        <p>NT.0</p>
-                        <p><span>NT.298</span></p>
+                    <div class="row justify-content-end rongtotal ml-auto mr-2 pt-3 rongmoney pr-5">
+                        <div class="mr-5 rongsettotal ">
+                            <p>應付金額
+                            </p>
+                        </div>
+                        <div class="ml-5  rongsettotal">
+                            <span>NT.298</span>
+                        </div>
                     </div>
                 </div>
 
