--- a/index2.html
+++ b/index2.html
@@ -138,7 +138,7 @@
 
                 </div>
             </div>
-            <div class="container mt-5 pt-4">
+            <div class="container mt-5 pt-4 w875 ">
                 <div class="row justify-content-end rongtotal">
                     <div class="mr-5 ">
                         <p>總金額</p>
@@ -151,7 +151,7 @@
                         <p>NT.0</p>
                     </div>
                 </div>
-                <div class="row justify-content-end rongtotal">
+                <div class="row justify-content-end rongtotal ml-auto mr-2 pt-3 rongmoney">
                     <div class="mr-5 rongsettotal ">
                         <p>應付金額
                         </p>
